# leaguepedia_parser

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonapp.yml
leaguepedia_parser/: __init__.py  leaguepedia_parser.py  logger.py
leaguepedia_parser/_tests/: test.ipynb  test_game.py  test_leaguepedia_parser.py  test_team.py
leaguepedia_parser/parsers/: compare.py  game_parser.py  team_parser.py
leaguepedia_parser/site/: leaguepedia.py
leaguepedia_parser/transmuters/: field_names.py  game.py  game_players.py  picks_bans.py  tournament.py
tests/: __init__.py  conftest.py  test_game.py  test_team.py
