[tool.poetry]
name = "leaguepedia_parser"
version = "2.0.0a0"
description = "A parser for Leaguepedia data"
authors = ["Tolki <gary.mialaret@gmail.com>"]
license = "MIT"
repository = "https://github.com/mrtolkien/leaguepedia_parser"

[tool.poetry.dependencies]
python = "^3.8"
mwclient = "^0.10.1"
lol-dto = {git = "https://github.com/mrtolkien/lol_dto.git", rev = "dev/2.0.0"}
lol-id-tools = "^1.7.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
